style: fix Load Strategy button visibility in upload modal

--- a/packages/bot-web-ui/src/components/load-modal/load-modal.scss
+++ b/packages/bot-web-ui/src/components/load-modal/load-modal.scss
@@ -150,26 +150,29 @@
 
         &__container {
             &--has-footer {
-                height: 500px;
-                max-height: 70vh;
-                margin-top: -1rem;
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                overflow: hidden;
             }
         }
 
         &__title {
             margin: 1.5rem;
+            flex-shrink: 0;
         }
 
         &__local-preview {
             width: 100%;
-            height: 100%;
+            flex: 1;
             display: flex;
             flex-direction: column;
+            overflow: hidden;
+            min-height: 0;
 
             .load-strategy__preview-workspace {
                 flex: 1;
-                min-height: 300px;
-                height: 100%;
+                min-height: 250px;
                 margin: 0;
                 background: var(--general-section-1);
             }
